--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "3.8.0",
     "@react-native/new-app-screen": "0.81.4",
+    "graphql": "^16.11.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-pager-view": "^6.9.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-vector-icons": "^10.3.0",
     "realm": "^20.2.0"
